// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stack synthesis merges all elements into a single output 1`] = `
"{
  "module": {
    "EksModule": {
      "cluster_name": "my_cluster_name",
      "source": "terraform-aws-modules/eks/aws",
      "version": "7.0.1"
    }
  },
  "output": {
    "eks_version": {
      "value": "7.0.1"
    }
  },
  "provider": {
    "aws": [
      {
        "access_key": "foo"
      }
    ]
  },
  "resource": {
    "aws_bucket": {
      "Resource1": {
        "foo": "Resource1",
        "prop1": "bar1",
        "prop2": 1234,
        "prop3": {
          "name": "should be overwritten in resource 2",
          "value": 5678
        }
      }
    },
    "aws_topic": {
      "Resource2": {
        "foo": "Resource2",
        "prop1": "bar1",
        "prop3": {
          "name": "test",
          "value": 5678
        },
        "provisioner": [
          {
            "local-exec": {
              "command": "echo 'Hello World' >example.txt"
            }
          }
        ]
      }
    }
  },
  "terraform": {
    "backend": {
      "remote": {
        "organization": "test",
        "workspaces": {
          "name": "test"
        }
      }
    },
    "required_providers": {
      "aws": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;

exports[`stack synthesis no flags 1`] = `
"{
  "module": {
    "EksModule": {
      "cluster_name": "my_cluster_name",
      "source": "terraform-aws-modules/eks/aws",
      "version": "7.0.1"
    }
  },
  "output": {
    "eks_version": {
      "value": "7.0.1"
    }
  },
  "provider": {
    "aws": [
      {
        "access_key": "foo"
      }
    ]
  },
  "resource": {
    "aws_bucket": {
      "Resource1": {
        "foo": "Resource1",
        "prop1": "bar1",
        "prop2": 1234,
        "prop3": {
          "name": "should be overwritten in resource 2",
          "value": 5678
        }
      }
    }
  },
  "terraform": {
    "required_providers": {
      "aws": {
        "version": "~> 2.0"
      }
    }
  }
}"
`;
